modificando el fondo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.2.19/tailwind.min.css" rel="stylesheet">
   <style>
     body {
-      background-color: #121212;
+      sbackground-color: #121212;
     }
     .app-icon {
       transition: transform 0.3s;
@@ -17,15 +17,15 @@
     }
   </style>
 </head>
-<body class="text-white">
+<body class="text-white bg-gradient-to-r from-blue-200 via-blue-500 to-gray-600">
 
   <div class="flex flex-col items-center justify-center min-h-screen space-y-10">
     <h1 class="flex text-4xl font-bold mb-8 m-0 p-0">Milo Smart TV</h1>
-    <div class="grid grid-cols-2 md:grid-cols-4 gap-8">
+    <div class="grid grid-cols-2 md:grid-cols-3 gap-8">
       <a href="https://www.netflix.com" target="_blank" class="app-icon p-4 bg-white rounded-lg flex items-center justify-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/0/08/Netflix_2015_logo.svg" alt="Netflix" class="h-16">
       </a>
-      <a href="https://www.disneyplus.com" target="_blank" class="app-icon p-4 bg-blue-300 rounded-lg flex items-center justify-center">
+      <a href="https://www.disneyplus.com" target="_blank" class="app-icon p-4 bg-white rounded-lg flex items-center justify-center">
         <img src="https://upload.wikimedia.org/wikipedia/commons/3/3e/Disney%2B_logo.svg" alt="Disney+" class="h-16">
       </a>
       <a href="https://www.crunchyroll.com" target="_blank" class="app-icon p-4 bg-white rounded-lg flex items-center justify-center">
